@@ -459,7 +459,8 @@
 		<Product type="0002" id="000d" name="PST02-1B Multi Sensor"/>
 	</Manufacturer>
 	<Manufacturer id="010e" name="Polycontrol">
-		<Product type="0003" id="0002" name="Danalock Circle/Square"/>
+		<Product type="0002" id="0001" name="Danalock Keypad" config="polycontrol/keypad.xml"/>
+		<Product type="0003" id="0002" name="Danalock Circle/Square" config="polycontrol/doorlock.xml"/>
 	</Manufacturer>
 	<Manufacturer id="0154" name="Popp">
 		<Product type="1100" id="0001" name="123601 Plug-in Switch" config="popp/123601.xml" />
