@@ -108,6 +108,7 @@ Version 1.3
  - Fixed issue 469 - Added Fibaro Smoke Detector FGSD-002 thanks to tmartine (Alex)
  - Fix LogImpl crash if no filename was configured (pull req 488) (Stromnet)
  - Update Fibaro Smoke Sensor device, interview process wouldn't complete (Alex)
+ - Fixed issue 464 - Added/Updated Polycontrol keypad/doorlock devices thanks to santal (Alex)
 
 Version 1.2 
  - Released on 15/10/14
